--- a/.gitignore
+++ b/.gitignore
@@ -2,9 +2,12 @@
 node_modules/
 dist/
 static/ckeditor
-gifs/
 npm-debug.log
 test/unit/coverage
 test/e2e/reports
 selenium-debug.log
 .idea
+/node_modules/
+/target/
+*.iml
+
